--- a/custom_scss/style.scss
+++ b/custom_scss/style.scss
@@ -7,6 +7,22 @@ $navbar-dark-color:   #292f36;
 // add rest of cutsom scss here
 $roboto: "Roboto Mono";
 $inter: "Inter";
+
+@mixin mobile-section-title {
+    color: #4ecdc4;
+    font-family:$inter;
+    font-size: 36px;
+    font-weight: 700;
+    margin-bottom: 50px;
+    text-align: center;
+}
+
+@mixin text {
+    font-family: $inter;
+    color: rgba($color: white, $alpha: 0.7);
+}
+
+
 body {
     background-color: #292f36 ;
 }
@@ -28,7 +44,8 @@ body {
 
 }
 
-.container {
+.hero-section {
+    margin-top: 10px;
 
     .text-container {
         position: relative;
@@ -51,11 +68,60 @@ body {
             color: rgba($color: white, $alpha: 0.7);
             font-family: $inter;
             font-size: 16px;
-
         }
     }
 }
 
+.about-section {
 
+    h2 {
+        color: #4ecdc4;
+        font-family:$inter;
+        font-size: 36px;
+        font-weight: 700;
+        margin-bottom: 50px;
+        text-align: center;
+    }
 
+    .about-section_discription {
+        color: rgba($color: white, $alpha: 0.7);
+        line-height: 1.75;
+        margin: 0 auto 45px auto;
+        text-align: center;
+        width: 302px;
+    }
+
+    img {
+        position: relative;
+        left: 50%;
+        transform: translateX(-50%);
+        margin-bottom: 20px;
+    }
+}
+
+.skills-section {
+    h2 {
+        @include mobile-section-title();
+    }
+
+    .skills-section_discription {
+        @include text();
+        margin-bottom: 20px;
+        text-align: center;
+    }
+    
+    .skills-section_container {
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: space-between;
+        margin: 0 auto 0 auto;
+        margin-bottom: 20px;
+
+        img {
+            display: inline-block;
+            width: 100%;
+            max-width: 48px;
+        }
+    }
+}
 
