--- a/custom_scss/style.scss
+++ b/custom_scss/style.scss
@@ -202,7 +202,8 @@ body {
         align-items: center;
 
         .card {
-            margin-bottom: 25px;
+            padding: 0;
+            margin: 10px auto;
             border:#292f36;
             box-shadow: 4px 4px rgba($color: #000000, $alpha: 0.25);
 
