--- a/custom_scss/style.scss
+++ b/custom_scss/style.scss
@@ -19,7 +19,7 @@ $inter: "Inter";
 
 @mixin text {
     font-family: $inter;
-    color: rgba($color: white, $alpha: 0.7);
+    color: rgba($color: aliceblue, $alpha: 0.7);
 }
 
 
@@ -97,13 +97,17 @@ body {
                     font-family: $roboto;
                     text-decoration:none;
                 }
+
+                a:hover {
+                    color:aliceblue;
+                }
             }
         }
     }
 }
 
 .tag {
-    color: rgba($color: white, $alpha: 0.40);
+    color: rgba($color: aliceblue, $alpha: 0.40);
     font-family: $roboto;
 
 }
@@ -119,20 +123,38 @@ body {
             color: #4ecdc4;
             font-family: $roboto;
             font-size: 16px;
+            opacity: 0;
+            animation: fadeInUp 1s 0.5s;
+            animation-fill-mode: forwards;
         }
 
         h1 {
-            color: white;
+            color: aliceblue;
+            display: none;
             font-family: $inter;
             font-size: 40px;
             font-weight: 700;
         }
 
         .hero-description {
-            color: rgba($color: white, $alpha: 0.7);
+            color: rgba($color: aliceblue, $alpha: 0.7);
             font-family: $inter;
             font-size: 16px;
+            opacity: 0;
+            animation: fadeInUp 1s 3.5s;
+            animation-fill-mode: forwards;
         }
+    }
+}
+
+@keyframes fadeInUp {
+    from {
+        transform: translate3d(0,40px,0)
+    }
+
+    to {
+        transform: translate3d(0,0,0);
+        opacity: 1
     }
 }
 
@@ -148,7 +170,7 @@ body {
     }
 
     .about-section_discription {
-        color: rgba($color: white, $alpha: 0.7);
+        color: rgba($color: aliceblue, $alpha: 0.7);
         line-height: 1.75;
         margin: 0 auto 45px auto;
         text-align: center;
@@ -235,10 +257,15 @@ body {
                     background-color:#ff6b6b ;
                     border: #ff6b6b;
                 }
+
+                .project-button:hover {
+                    box-shadow: 7px 7px rgba($color: #000000, $alpha: 0.25);
+                    color: aliceblue;
+                }
             }
 
             .card-text {
-                color: rgba($color: white, $alpha: 0.7);
+                color: rgba($color: aliceblue, $alpha: 0.7);
             }
         }
     }
@@ -267,7 +294,12 @@ body {
         .btn-primary { 
             background-color: #ff6b6b;
             border: #ff6b6b;
+            color:#000000;
             margin-top: 20px;
+        }
+
+        .contact-button:hover {
+           color: aliceblue;
         }
     }
 }
